Replaced "Locale" deprecated to Locale.of